objects/Product_Specialty_User_Assignment__c.object
<CustomObject>
    <description>Specialty User Assignment - This is child object to Specialty which is for storing records for Users assigned the particular specialty.</description>
    <fields>
        <fullName>BU__c</fullName>
        <description>BU</description>
        <formula>TEXT( User__r.Business_Group__c )</formula>
        <inlineHelpText>BU</inlineHelpText>
        <label>BU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Safe_ID__c</fullName>
        <description>This field will display the 18-character case sensitive ID in application reports.</description>
        <formula>Id &amp; 
MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,( 
IF(FIND(MID(Id,1,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0) 
+IF(FIND(MID(Id,2,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0) 
+IF(FIND(MID(Id,3,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0) 
+IF(FIND(MID(Id,4,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0) 
+IF(FIND(MID(Id,5,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0) 
)+1,1) 
&amp; 
MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,( 
IF(FIND(MID(Id,6,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0) 
+IF(FIND(MID(Id,7,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0) 
+IF(FIND(MID(Id,8,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0) 
+IF(FIND(MID(Id,9,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0) 
+IF(FIND(MID(Id,10,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0) 
)+1,1) 
&amp; 
MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,( 
IF(FIND(MID(Id,11,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0) 
+IF(FIND(MID(Id,12,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0) 
+IF(FIND(MID(Id,13,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0) 
+IF(FIND(MID(Id,14,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0) 
+IF(FIND(MID(Id,15,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0) 
)+1,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Safe ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Or_Updated__c</fullName>
        <defaultValue>true</defaultValue>
        <label>New Or Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_User_Insert_Sales_Territory__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field provides the information about the new user which is inserted in sales territory and the same user is present in Specialty user assignment then this checkbox gets checked.</description>
        <label>New User Insert Sales Territory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Specialty__c</fullName>
        <description>Specialty</description>
        <inlineHelpText>Specialty</inlineHelpText>
        <label>Specialty</label>
        <referenceTo>Product_Specialty__c</referenceTo>
        <relationshipLabel>Specialty User Assignments</relationshipLabel>
        <relationshipName>Product_Specialty_User_Assignments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <picklist>
            <picklistValues>
                <fullName>Quest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Informative</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>To_Be_Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>To Be Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User - LookUp</description>
        <inlineHelpText>User</inlineHelpText>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Product_Specialty_User_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Specialty User Assignment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>User__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Product_Specialty__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Oppties_with_my_Product_Speciality</fullName>
        <columns>NAME</columns>
        <columns>Product_Specialty__c</columns>
        <columns>User__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Oppties with my Product Speciality</label>
    </listViews>
    <nameField>
        <displayFormat>PSU-{000000}</displayFormat>
        <label>Specialty User Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Specialty User Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>